--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,11 +115,16 @@ body {
 .attribution {
     font-size: 11px;
     text-align: center;
-}
-
-.attribution a {
+    margin-top: 2rem;
+    position: fixed;
+    bottom: 2rem;
+    left: 0;
+    right: 0;
+  }
+  
+  .attribution a {
     color: hsl(228, 45%, 44%);
-}
+  }
 
 
 /* ... (previous CSS remains unchanged) ... */
